# tiny-view

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.claude/hooks/: require-worktree.sh
.claude/skills/agent-repo-bootstrap/: SKILL.md
.claude/skills/agent-repo-bootstrap/assets/: require-worktree.sh  settings.json
.claude/skills/agent-repo-bootstrap/evals/: evals.json
.claude/skills/agent-repo-bootstrap/references/: architecture-book.md  templates.md
.claude/skills/issue-batch-pr/: SKILL.md
.claude/skills/issue-batch-pr/evals/: evals.json
.claude/skills/worktree-pr-workflow/: SKILL.md
.claude/skills/worktree-pr-workflow-workspace/iteration-1/: benchmark.json  benchmark.md
.claude/skills/worktree-pr-workflow-workspace/iteration-1/eval-0/: eval_metadata.json
.claude/skills/worktree-pr-workflow-workspace/iteration-1/eval-0/with_skill/run-1/: grading.json
.claude/skills/worktree-pr-workflow-workspace/iteration-1/eval-0/without_skill/run-1/: grading.json
.claude/skills/worktree-pr-workflow-workspace/iteration-1/eval-1/: eval_metadata.json
.claude/skills/worktree-pr-workflow-workspace/iteration-1/eval-1/with_skill/run-1/: grading.json  timing.json
.claude/skills/worktree-pr-workflow-workspace/iteration-1/eval-1/with_skill/run-1/outputs/: git_log_oneline.txt  pr_artifact.md  transcript.md
.claude/skills/worktree-pr-workflow-workspace/iteration-1/eval-1/without_skill/run-1/: grading.json  timing.json
.claude/skills/worktree-pr-workflow-workspace/iteration-1/eval-1/without_skill/run-1/outputs/: git_log_oneline.txt  pr_artifact.md  transcript.md
.claude/skills/worktree-pr-workflow-workspace/iteration-1/eval-2/: eval_metadata.json
.claude/skills/worktree-pr-workflow-workspace/iteration-1/eval-2/with_skill/run-1/: grading.json  timing.json
.claude/skills/worktree-pr-workflow-workspace/iteration-1/eval-2/with_skill/run-1/outputs/: git_log_oneline.txt  pr_artifact.md  transcript.md
.claude/skills/worktree-pr-workflow-workspace/iteration-1/eval-2/without_skill/run-1/: grading.json  timing.json
.claude/skills/worktree-pr-workflow-workspace/iteration-1/eval-2/without_skill/run-1/outputs/: git_log.txt  pr_artifact.md  transcript.md
.claude/skills/worktree-pr-workflow/evals/: evals.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: PRD.md  TEMPLATE_GUIDE.md
scripts/: bundle-macos.sh
src/: config.rs  config.test.md  detach.rs  e2e.rs  e2e.test.md  main.rs  main.test.md  menu.rs  menu.test.md  shortcuts.rs  shortcuts.test.md  template.rs  template.test.md  watch.rs  watch.test.md  webview.rs  webview.test.md
src/guides/: template.md
src/templates/: code.html  markdown.html  mermaid.html  minimal.html  text.html
tests/: guide_cli.rs  user_template_e2e.rs
