[package]
name = "tinyview"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Ephemeral CLI WebView runtime"
license = "MIT"

[[bin]]
name = "tinyview"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
# `transparent` feature enables true per-pixel transparency on macOS by calling
# WKWebView private APIs (`_drawsBackground`). PRD §9.9 requires this. Note this
# blocks App Store publication — fine for a CLI tool that isn't sandbox-targeted.
wry = { version = "0.55", features = ["transparent"] }
tao = "0.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", default-features = false, features = ["parse"] }
# `--watch` mode (PRD §9.10). Mini debouncer is intentionally chosen over
# the full one — TinyView only needs "did this file change?" with a 100ms
# trailing debounce, not rename correlation. 0.5.x is pinned because 0.7
# bumps MSRV to 1.77 (this crate is rust-version = "1.75"). `notify` itself
# is consumed transitively via `notify_debouncer_mini::notify` re-export to
# avoid pulling two copies of notify into the binary.
notify-debouncer-mini = "0.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
